CHANGELOG for Fall of Eden
--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.3o
------------
* Various bugfixes in new content.
* Rosalin TFs:
 - Moth TF.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3n
------------
* The usual typos and bugfixes.
* Lei can now give you some advice on how to handle Krawitz.
* Fixed a bug with lactation.
* Added scenes for bunnies (includes some Terry scenes by LD):
 - Win: Get fucked by males.
 - Win: Fuck males (dominant).
* Added partial repeat date scenes for Miranda (mostly talk atm). This is planned to be a much more extensive scene later, with more branching options and events.
* Naga mob (no content yet) + Naga transformative item.
* Added several TF items to Rosalin's menu:
 - Naga TF.
 - Dog TF.
 - Wolf TF.
 - Fox TF.
 - Scorpion TF.
* FranklyInappropriate offered a pull request to fix Fera's strapon stuff. Much appreciated!

Version 0.3m
------------
* The usual array of corrections to grammatical missteps and parser flailing.
* Misc opening times in Rigard shops fixed.
* Added a combat turn order listing, replacing the rather vague initiative listing.
* Changed the color of the sleep/wait/explore buttons to make it more clear when they are available.
* Changed color of level up button to green.
* Changed the approach gates sequence to make finding Lei more intuitive (thanks Del!). Lei's sequence has also been modified. Might result in some weirdness since I poked around at the flags.
* Added a new scene to Magnus, if you went and learned magic from Jeanne (a pretty short thing, but things make more sense now).
* Added TFs to Terry. This doesn't quite work the same way as usual TFs, but look around and I'm sure you'll figure out how to do it.