@@ -21,8 +21,7 @@ TODO:
 * Look through Lactation code, there is something wrong with it (TEST)
 
 
-* Sample coms
-* Foxberries pickup scene
+* Sample coms (Naga on the way)
 
 
 
