@@ -10,6 +10,7 @@ Version 0.3o
 * Various bugfixes in new content.
 * Rosalin TFs:
  - Moth TF.
+* Foxberries can now be picked in the forest, making it possible to craft the Vulpinix potion.
 
 --------------------------------------------
              PREVIOUS VERSIONS
